--- a/index.html
+++ b/index.html
@@ -1,227 +1,204 @@
 <!doctype html>
-<html class="no-js" lang="en-US">
+<html lang="en">
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
 
 <head>
-    <meta charset="utf-8">
-    <title>Unplugged</title>
-    <meta name="Unplugged" content="retreat">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
-
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
-
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\normalize.css">
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\main.css">
-
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Open+Sans&family=Poppins:wght@300&display=swap"
-        rel="stylesheet">
-
-    <meta name="theme-color" content="#fafafa">
-</head>
-
-<!doctype html>
-<html class="Home" lang="en-US">
-
-<head>
-    <meta charset="utf-8">
     <title>Unplugged Retreat</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\normalize.css">
-    <link rel="stylesheet" href="C:\Users\tyler\unplugged-homepg\css\main.css">
+    <link rel="stylesheet" href="css\normalize.css">
+    <link rel="stylesheet" href="css\main.css">
 
+    <script src="https://kit.fontawesome.com/3e9b2e8894.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Open+Sans&family=Poppins:wght@300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@300&display=swap"
         rel="stylesheet">
-
-    <meta name="theme-color" content="#fafafa">
 </head>
+<styles>
 
-<style>
-    body {
-        max-width: 960px;
-        font-size: 16px;
-        display: flex;
-
-
-    }
-
-    header {
-        font-size: 4em;
-        align-items: flex-start;
-    }
-</style>
+</styles>
 
 <body>
 
     <!-- Add your site or application content here -->
-    <script src="../unplugged-homepg/about/index.html"></script>
-    <script src="../unplugged-homepg/faq/index.html"></script>
-    <script src="./js/plugins.js"></script>
+    <header>
 
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script>
-        window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-        ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
+        <div class="content-wrapper">
+            <img src="unpluggedlogo.png" alt="battery icon">
 
-    <header>Unplugged
-
-    </header>
-    <div class="content-wrapper">
-        <figure>
-            <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo">
-        </figure>
-        <div class="header-divider"></div>
-        <nav>
+            <div class="header-divider">
+                <nav>
+            </div>
             <ul>
-                <li><a href="C:\Users\tyler\Unplugged\about\index.html" target="_blank">About</a></li>
-                <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+                <li><a href="faq/index.html">FAQ</a></li>
+
+                <li><a href="about/index.html">About</a></li>
             </ul>
-        </nav>
-    </div>
-    </header>>
+            </nav>
+        </div>
+    </header>
 
     <main>
-        <section class="hero-area">
-            <div class="content-wrapper">
 
-                <h1>Retreat from the desk, returned refreshed.</h1>
+        <section class="hero-area"><img src="unplugged-retreat.jpg">
 
-            </div>
+            <h1>Retreat from the desk, return refreshed.</h1>
         </section>
+
         <aside>
-
             <div class="content-wrapper">
-
                 <div class="form-description">
                     <h3>Want to join the next retreat?</h3>
-
-                    <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+                    <p>
+                        Find out when we are holding our next retreat and how your company or team can sign up!
+                    </p>
                 </div>
                 <div class="form">
                     <h3>Find out more</h3>
-
-                    <input type="text" name="name" value="email address">
+                    <input type="text" name="name" value="name@email.com">
                     <input type="button" value="Download Itinerary">
                 </div>
             </div>
+            <!-- aside content wrapper ends -->
         </aside>
 
         <section class="features">
-            <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
-
             <div class="content-wrapper">
-                <article>
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva,
-                        Wisconsin.</p>
-
-
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms,
-                        and 4
-                        breakout rooms.</p>
-
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">Private chef team providing on demand meals - just like your
-                        team kitchen.</p>
-
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">5 outdoor obstacle courses, including private beach ½ mile from
-                        bungalow.</p>
-
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">Retreat facilitator to manage your day to day activities so you
-                        all get a chance to reset.</p>
-
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
-
-                    <p class="fontawesome-icon"></p>
-                    <p class="features-item-description">Be a better team in 5 days, like this one.</p>
-
-                </article>
-
-            </div>
-
-            <section class="reviews">
-                <div class="content-wrapper">
-                    <h3>Lacrue Bottling Co.<br> October 2018</h3>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                        voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-
+                <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
+                
+                <div class="features-items">
+                    <article>
+                        <p class="fontawesome-icon"><i class="fa-solid fa-campground"></i>
+                        </p>
+                        <p class="features-item-description">
+                            Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
+                        </p>
+                    </article>
+                    <article>
+                        <p class="fontawesome-icon"><i class="fa-duotone fa-bed"></i>
+                        </p>
+                        <p class="features-item-description">
+                            12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
+                        </p>
+                    </article>
+                    <article>
+                        <p class="fontawesome-icon"><i class="fa-sharp fa-regular fa-utensils"></i>
+                        </p>
+                        <p class="features-item-description">
+                            Private chef team providing on demand meals - just like your team kitchen.
+                        </p>
+                    </article>
+                    <article>
+                        <p class="fontawesome-icon"><i class="fa-duotone fa-shoe-prints"></i>
+                        </p>
+                        <p class="features-item-description">
+                            5 outdoor obstacle courses, including private beach ½ mile from bungalow.
+                        </p>
+                    </article>
+                    <article>
+                        <p class="fontawesome-icon"><i class="fa-regular fa-face-smile"></i>
+                        </p>
+                        <p class="features-item-description">
+                            Retreat facilitator to manage your day to day activities so you all get a chance to
+                            reset.
+                        </p>
+                    </article>
+                    <article>
+                        <p class="fontawesome-icon"><i class="fa-regular fa-wifi"></i>
+                        </p>
+                        <p class="features-item-description">
+                            Dedicated computer room for times that you must wifi.
+                        </p>
+                    </article>
                 </div>
-            </section>
-    </main>
+            </div>
+        </section>
 
-    </div>
+        <section class="reviews">
+            <div class="content-wrapper">
+                <h2>Be a better team in 5 days, like this one.</h2>
+                <article>
+                    <div>
+                        <h3>LaCrue Bottling Co. October 2018</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        </p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+    </main>
+    <!-- main wrapper -->
 
     <footer>
-        <h4>Contact</h4>
-
-        <div class="contact">
-            <address>555-555-5555</address>
+        <div class="content-wrapper">
+            <div class="footer-content">
+                <div class="contact">
+                    <h4>Contact</h4>
+                    <address>
+                        <p>
+                            555-555-5555<br>
+                            hello@unplugged.com
+                        </p>
+                    </address>
+                </div>
+                <div class="social">
+                    <h4>Social</h4>
+                    <div class="social-icons">
+                        <p>
+                            <a href="https://www.facebook.com/Skillcrush/" target="_blank"></a>
+                        </p>
+                        <p>
+                            <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+                        </p>
+                        <p>
+                            <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- footer content ends -->
         </div>
-        <div class="social"><a href="https://www.facebook.com/profile.php?id=100088825444355" target="_blank"
-                rel="noopener"></a></div>
-        <div class="social-icons"></div>
-        <div class="copyright"></div>
-
-        </div>
+        <!--footer content-wrapper ends-->
+        <div class="copyright">
+            <p>Copyright 2018 | Unplugged</p>
         </div>
     </footer>
-    </article>
 
+    <script src="js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script>
+        window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')
+    </script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 
-
-
-
-
-
-</body>
-
-</html>
-
-
-</header>
-<script src="js/vendor/modernizr-3.11.2.min.js"></script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
-
-<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-<script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-</script>
-<script src="https://www.google-analytics.com/analytics.js" async></script>
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+        window.ga = function () {
+            ga.q.push(arguments)
+        };
+        ga.q = [];
+        ga.l = +new Date;
+        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
